# limn

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: bundle.rs  hash.rs  main.rs  oodle.rs  read.rs  scoped_fs.rs
src/file/: bones.rs  lua.rs  material.rs  mod.rs  package.rs  strings.rs  texture.rs
