[package]
name = "limn"
version = "0.1.9"
authors = ["ManShanko <deathage@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ManShanko/limn"

[profile.release]
opt-level = "s"

[dependencies]
steam_find = { git = "https://github.com/ManShanko/steam_find", rev = "0e070bb1e1604588f2dc5d727b44719b188a67ad" }
byteorder = "1.4.3"
leb128 = "0.2.5"
libloading = "0.7.3"
