[package]
name = "limn"
version = "0.2.0"
authors = ["ManShanko <deathage@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ManShanko/limn"

[profile.release]
opt-level = "s"

[dependencies]
steam_find = { git = "https://github.com/ManShanko/steam_find", rev = "c7ab9376cd18a4e02a84e61aac92ca9ec70c7031" }
byteorder = "1.4.3"
leb128 = "0.2.5"
libloading = "0.7.3"
lexopt = "0.3.0"
